updated the files for easy usage, pattern definition